other-vpol/require-qos-guaranteed/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  labels:
    app: myapp
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests:
        memory: "100Mi"
        cpu: "1"
      limits:
        memory: "100Mi"
        cpu: "1"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  labels:
    app: myapp
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests:
        memory: "50Mi"
        cpu: "2"
      limits:
        memory: "50Mi"
        cpu: "2"
  - name: busybox-again
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests:
        memory: "100Mi"
        cpu: "1"
      limits:
        memory: "100Mi"
        cpu: "1"
